--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.carousel img{
+    object-fit: contain !important;
+  opacity: 0.2;
+}
+
